Artist names are not hidden under header when navigated to using their link. Fixes #42

--- a/base/static/base/css/style.sass
+++ b/base/static/base/css/style.sass
@@ -194,6 +194,9 @@ body
   @media (min-width: $tablet)
     font-size: 4rem
 
+.section-header--artists
+  margin: 0
+
 .section-content
   @include container
   padding: 0 2rem
@@ -358,19 +361,19 @@ body
 
 .item--text
   margin: 0 0 1rem 0
-  padding: 0 0 5rem 0
+  padding: 6rem 0
   border-bottom: 1px solid $color-type
   position: relative
 
   @media (min-width: $tablet)
-    margin: 0 0 3rem 0
-    padding: 0 6rem 6rem 0
+    padding: 6rem 3rem 6rem 0
+    margin: 0
     border: none
 
   @media (min-width: $widescreen)
     @include span(6 of 12 split)
+    margin: 0 0 3rem 0
     border-bottom: none
-    padding: 0 0 4rem 0
 
   &:last-child
     border-bottom: none
